# devcontainer-cli

./: .gitignore  README.md  pyproject.toml
devcontainer_cli/: __init__.py  cli.py  parser.py  templates.py  validator.py
