[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "devcontainer-cli"
version = "0.1.0"
description = "A CLI tool to validate, inspect and generate devcontainer.json configurations"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "jsonschema>=4.0",
]

[project.scripts]
devcontainer-cli = "devcontainer_cli.cli:main"
